--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port = 80
 
+#para cambiar el formato de la fecha en la consola
+logging.pattern.dateformat=hh:mm
+
+#para eliminar el banner de spring
+spring.main.banner-mode=off
+
+#para eliminar el uso del caché del servidor en tiempo de desarrollo, en producción debe ser true
+spring.thymeleaf.cache=false
